# nonebot-plugin-crash-king

./: README.md  pyproject.toml
nonebot_plugin_crash_king/: __init__.py  config.py  utils.py
